--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -349,6 +349,10 @@ use RDF validation for data integration
 
 \section{Implementation}
 
+- Missy / DDI-RDF export / multiple concrete syntaxes / Triple store / content negotiation / reference implementation of the Disco data model / Missy data model is based in Disco data model
+
+- RDF validator
+
 \textbf{Validation of Data Cube instances.}
 \begin{itemize}
 	\item \textcolor{blue}{is there an implementation available yet? If not I implement it in our validation environment}
